@@ -1,7 +1,0 @@
-Obsoletes: pupmod-pki-test >= 0.0.1
-Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1-0
-Requires: pupmod-simp-auditd < 8.0.0-0
-Requires: pupmod-simp-auditd >= 7.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
-Requires: pupmod-simp-simplib < 4.0.0-0
